# open-cas-telemetry-framework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  octf-config.cmake  octf-paths.cmake  octf-version.cmake  setup_dependencies.sh
doc/: CMakeLists.txt  IOTRACER.md  NOTICE
doc/coding_style/: CODING_STYLE.md  CodingStyle.cpp  CodingStyle.h  DoxygenComments.h  clang-format
doc/examples/: EXAMPLES.md
doc/examples/auto_cli/: AUTO_CLI.md
doc/examples/c/iotracer/: IOTRACER.md
source/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/examples/auto_cli/: CMakeLists.txt  InterfaceHelloWorld.proto  InterfaceHelloWorldImpl.cpp  InterfaceHelloWorldImpl.h  main.cpp
source/examples/c/: CMakeLists.txt
source/examples/c/iotracer/: CMakeLists.txt  main.c
source/examples/cli/: CMakeLists.txt  InterfaceHelloWorldImpl.cpp  InterfaceHelloWorldImpl.h  main.cpp
source/examples/plugin/: CMakeLists.txt
source/examples/plugin/client/: CMakeLists.txt  TestPluginShadow.cpp  TestPluginShadow.h  main.cpp
source/examples/plugin/proto/: CMakeLists.txt  InterfaceTest.proto  test.proto
source/examples/plugin/server/: CMakeLists.txt  InterfaceTestImpl.cpp  InterfaceTestImpl.h  TestPlugin.cpp  TestPlugin.h  main.cpp
source/examples/sockets/: CMakeLists.txt  socketsExampleMain.cpp
source/octf/: CMakeLists.txt  generateCommonHeader.sh
source/octf/analytics/statistics/: CMakeLists.txt  Distribution.cpp  Distribution.h  FilesystemStatistics.cpp  FilesystemStatistics.h  FilesystemStatisticsEntry.cpp  FilesystemStatisticsEntry.h  IFileSystemViewer.h  IoStatistics.cpp  IoStatistics.h  IoStatisticsSet.cpp  IoStatisticsSet.h  WorksetCalculator.cpp  WorksetCalculator.h  WorksetCalculatorDevices.cpp  WorksetCalculatorDevices.h
source/octf/c/: CMakeLists.txt  iotrace_plugin.cpp  iotrace_plugin.h
source/octf/cli/: CLIElement.cpp  CLIException.h  CLIList.cpp  CLIList.h  CLIProperties.cpp  CLIProperties.h  CLIUtils.cpp  CLIUtils.h  CMakeLists.txt  CommandSet.cpp  CommandSet.h  Executor.cpp  Executor.h  GenericPluginShadow.cpp  GenericPluginShadow.h  ICommandSet.h  Module.cpp  Module.h
source/octf/cli/cmd/: CmdHelp.cpp  CmdHelp.h  CmdVersion.cpp  CmdVersion.h  Command.cpp  Command.h  CommandProtobuf.cpp  CommandProtobuf.h  CommandProtobufLocal.cpp  CommandProtobufLocal.h  ICommand.h
source/octf/cli/internal/: CLIElement.cpp  CLIElement.h  CLIException.h  CLIList.cpp  CLIList.h  CLIUtils.cpp  CLIUtils.h  CMakeLists.txt  CommandSet.cpp  CommandSet.h  GenericPluginShadow.cpp  GenericPluginShadow.h  ICommandSet.h  Module.cpp  Module.h  OptionsValidation.cpp  OptionsValidation.h
source/octf/cli/param/: IParameter.h  ParamEnum.cpp  (+12 more)
source/octf/communication/: CMakeLists.txt  Call.h  CommunicationManagerClient.cpp  CommunicationManagerClient.h  CommunicationManagerServer.cpp  CommunicationManagerServer.h  ICommunicationManager.h  IMethodHandler.h  Method.cpp  Method.h  RpcChannelImpl.cpp  RpcChannelImpl.h  RpcControllerImpl.cpp  RpcControllerImpl.h  RpcOutputStream.cpp  RpcOutputStream.h
source/octf/fs/: CMakeLists.txt  FileId.h  IFileSystemViewer.h
source/octf/interface/: CMakeLists.txt  IInterface.h  IIoTraceParser.h  IRingTraceProducer.h  ITraceConverter.h  ITraceExecutor.h  ITraceExtensionBuilder.h  ITraceSerializer.h  InterfaceCliImpl.cpp  InterfaceCliImpl.h  InterfaceConfigurationImpl.cpp  InterfaceConfigurationImpl.h  InterfaceId.cpp  InterfaceId.h  InterfaceIdentificationImpl.cpp  InterfaceIdentificationImpl.h  InterfaceServiceImpl.cpp  InterfaceServiceImpl.h  InterfaceTraceCreatingImpl.cpp  InterfaceTraceCreatingImpl.h  InterfaceTraceManagementImpl.cpp  InterfaceTraceManagementImpl.h  InterfaceTraceParsingImpl.cpp  InterfaceTraceParsingImpl.h  TraceConverter.cpp  TraceConverter.h  TraceManager.cpp  TraceManager.h  TraceProducerLocal.cpp  TraceProducerLocal.h
source/octf/node/: CMakeLists.txt  INode.h  NodeBase.cpp  NodeBase.h  NodeClient.cpp  NodeClient.h  NodeGeneric.cpp  NodeGeneric.h  NodeId.cpp  NodeId.h  NodeServer.cpp  NodeServer.h  NodeShadow.cpp  NodeShadow.h
source/octf/plugin/: CMakeLists.txt  NodePlugin.cpp  NodePlugin.h  NodePluginShadow.cpp  NodePluginShadow.h
source/octf/proto/: CMakeLists.txt  InterfaceCLI.proto  InterfaceConfiguration.proto  InterfaceIdentification.proto  InterfaceService.proto  InterfaceTraceCreating.proto  InterfaceTraceManagement.proto  InterfaceTraceParsing.proto  configuration.proto  defs.proto  extensions.proto  opts.proto  packets.proto  parsedTrace.proto  statistics.proto  trace.proto  traceDefinitions.proto
source/octf/socket/: CMakeLists.txt  ConnectionTransceiver.cpp  ConnectionTransceiver.h  IConnectionTransceiverListener.h  ISocketClient.h  ISocketConnection.cpp  ISocketConnection.h  ISocketListener.h  ISocketServer.h  SocketConfig.cpp  SocketConfig.h  SocketFactory.cpp  SocketFactory.h  SocketManager.cpp  SocketManager.h
source/octf/trace/: CMakeLists.txt  IOTracePlugin.cpp  IOTracePlugin.h  ITrace.h  ITraceCache.h  ITraceExtension.h  ITraceRepository.h  TraceLibrary.cpp  TraceLibrary.h  iotrace_event.h  trace.c  trace.h
source/octf/utils/: CMakeLists.txt  CsvParser.cpp  CsvParser.h  DateTime.cpp  DateTime.h  Exception.cpp  Exception.h  FileOperations.cpp  FileOperations.h  FrameworkConfiguration.cpp  FrameworkConfiguration.h  Log.cpp  Log.h  ModulesDiscover.cpp  ModulesDiscover.h  NonCopyable.h  OptionsValidation.cpp  OptionsValidation.h  ProtoConverter.cpp  ProtoConverter.h  ProtobufReaderWriter.cpp  ProtobufReaderWriter.h  ProtobufReflection.cpp  ProtobufReflection.h  ResourcesGuarder.cpp  ResourcesGuarder.h  Semaphore.cpp  Semaphore.h  ShellExecutor.cpp  ShellExecutor.h  SignalHandler.cpp  SignalHandler.h  SizeConversion.h  Types.h
tests/: CMakeLists.txt
tests/octf/: CMakeLists.txt  UtilsTest.h
tests/octf/analytics/: CMakeLists.txt
tests/octf/node/: CMakeLists.txt  NodeIdTest.cpp
tests/octf/socket/: CMakeLists.txt  testDefines.h
tests/octf/trace/: CMakeLists.txt  TraceUtilsTest.h  TracingTest.cpp
tests/octf/utils/: CMakeLists.txt  ProtoConverterTest.cpp
(+192 files in other folders)
